--- a/src/assets/css/common/common.scss
+++ b/src/assets/css/common/common.scss
@@ -80,7 +80,7 @@ body {
   padding-top: 45px;
   box-shadow: 0 14px 28px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.22);
   z-index: 950;
-
+  background-color: #545c64;
   #container_menu {
   }
 }
