--- a/src/views/Home.html
+++ b/src/views/Home.html
@@ -11,7 +11,7 @@
         <!-- 头部 右 -->
         <div class="banner-right">
             <ul class="items">
-<!--                <li @click="logout()"><i class="el-icon-circle-cross"></i> 退出</li>-->
+                <li @click="logout"><i class="el-icon-circle-cross"></i> 退出</li>
             </ul>
         </div>
     </div>
@@ -49,6 +49,4 @@
     <div id="container_content" >
         <router-view ></router-view>
     </div>
-
-
 </div>
