--- a/src/views/Home.html
+++ b/src/views/Home.html
@@ -1,52 +1,29 @@
-<div id="container">
-    <!-- 头部 -->
-    <div id="container_banner">
-        <!-- 头部 左 -->
-        <div class="banner-left">
-            <a href="javascript:void(0);">
-<!--                <img src="../assets/images/admin_logo.png"/>-->
-            </a>
-        </div>
+<el-container>
+    <el-header>
+        <div style="margin-left: 96%;" @click="logout"><i class="el-icon-circle-cross"></i> 退出</div>
+    </el-header>
 
-        <!-- 头部 右 -->
-        <div class="banner-right">
-            <ul class="items">
-                <li @click="logout"><i class="el-icon-circle-cross"></i> 退出</li>
-            </ul>
-        </div>
-    </div>
+    <el-container>
+        <el-aside width="200px">
+            <el-menu
+                    default-active="2"
+                    class="el-menu-vertical-demo"
+                    @open="handleOpen"
+                    @close="handleClose"
+                    background-color="#545c64"
+                    text-color="#fff"
+                    active-text-color="#ffd04b">
 
-    <!-- 左侧菜单栏 -->
-    <div id="container_sidebar">
-        <el-menu
-                default-active="2"
-                class="el-menu-vertical-demo"
-                @open="handleOpen"
-                @close="handleClose"
-                background-color="#545c64"
-                text-color="#fff"
-                active-text-color="#ffd04b">
-            <el-menu-item index="1">
-                <i class="el-icon-location"></i>
-                <span slot="title">客服聊天</span>
-            </el-menu-item>
-            <el-menu-item index="2">
-                <i class="el-icon-menu"></i>
-                <span slot="title">黑名单 </span>
-            </el-menu-item>
-            <el-menu-item index="3">
-                <i class="el-icon-document"></i>
-                <span slot="title">导航三</span>
-            </el-menu-item>
-            <el-menu-item index="4">
-                <i class="el-icon-setting"></i>
-                <span slot="title">导航四</span>
-            </el-menu-item>
-        </el-menu>
-    </div>
+                <el-menu-item v-for="menu in menus" :index="menu.routerName" :key="menu.routerName" @click="jump(menu)">
+                    <i :class="menu.icon"></i>
+                    <span slot="title">{{menu.text}}</span>
+                </el-menu-item>
+            </el-menu>
+        </el-aside>
 
-    <!--右侧内容区-->
-    <div id="container_content" >
-        <router-view ></router-view>
-    </div>
-</div>
+        <el-main>
+            <router-view></router-view>
+
+        </el-main>
+    </el-container>
+</el-container>
