--- a/src/assets/im.scss
+++ b/src/assets/im.scss
@@ -1,3 +1,4 @@
 @import '../assets/css/common/common';
+@import '../assets/css/common/form';
 @import '../assets/css/common/list';
 @import '../assets/css/module/login';
