--- a/src/views/blanklist/BlankList.html
+++ b/src/views/blanklist/BlankList.html
@@ -18,7 +18,8 @@
             </div>
         </div>
 
-        <el-table :data="list" ref="listData" class="list__data" @selection-change="selectListRow" highlight-current-row v-loading="loading.list">
+        <el-table :data="list" ref="listData" class="list__data" @selection-change="selectListRow" highlight-current-row
+                  v-loading="loading.list">
             <el-table-column type="selection" width="50">
             </el-table-column>
             <el-table-column type="index" label="序号" align="center" width="70"></el-table-column>
@@ -51,5 +52,29 @@
                        layout="total, sizes, prev, pager, next, jumper"
                        :total="this.page.recordCount">
         </el-pagination>
+
     </div>
+
+    <el-dialog title="添加黑名单" :visible.sync="showAddWin" width="40%">
+        <el-form>
+            <div class="msg msg--above">输入要设置成黑名单的ip或账号，多个以“,”分割</div>
+            <el-input v-model="contentsAdd" type="textarea" :rows="8">
+            </el-input>
+        </el-form>
+        <div slot="footer">
+            <el-button @click="showAddWin = false">取 消</el-button>
+            <el-button type="primary" @click="submitAdd" v-loading="loading.add">确 定</el-button>
+        </div>
+    </el-dialog>
+
+    <el-dialog title="修改" :visible.sync="showModifyWin" width="25%" v-loading="loading.modifyWin">
+        <el-form :model="modifyModel">
+            <el-input v-model="modifyModel.content" ></el-input>
+            <el-input v-model="modifyModel.id" type="hidden"></el-input>
+        </el-form>
+        <div slot="footer" >
+            <el-button @click="showModifyWin = false">取 消</el-button>
+            <el-button type="primary" @click="submitModify" v-loading="loading.modify">确 定</el-button>
+        </div>
+    </el-dialog>
 </div>
