--- a/src/assets/im.scss
+++ b/src/assets/im.scss
@@ -1,4 +1,9 @@
-@import '../assets/css/common/common';
+@import 'css/common/global';
+
 @import '../assets/css/common/form';
 @import '../assets/css/common/list';
+@import '../assets/css/common/color';
+@import '../assets/css/common/dialog';
+
 @import '../assets/css/module/login';
+@import '../assets/css/module/home';
