--- a/src/assets/css/module/home.scss
+++ b/src/assets/css/module/home.scss
@@ -10,28 +10,35 @@
     #container_banner {
         position: fixed;
         width: 100%;
-        height: 50px;
+        height: 45px;
         background: #1f2d3d;
         color: #bfcbd9;
         //border-bottom: 1px solid #eee;
         z-index: 1000;
-
+        vertical-align: middle;
         .banner-left {
+            height: 45px;
+            line-height: 45px;
             display: inline-block;
             padding-left: 20px;
+            vertical-align: middle;
             h1 {
                 font-size: 15px;
+                margin: 0;
             }
         }
-
         .banner-right {
+            height: 45px;
+            line-height: 45px;
             float: right;
-
+            padding-right: 20px;
+            vertical-align: middle;
             .el-button {
+                vertical-align: middle;
                 display: inline-block;
                 margin-right: 15px;
                 span{
-                    color: #fff;
+                    color: #eee;
                 }
             }
         }
@@ -44,7 +51,7 @@
         position: fixed;
         height: 100vh;
         overflow-y: hidden;
-        padding-top: 50px;
+        padding-top: 45px;
         box-shadow: 0 14px 28px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .22);
         z-index: 950;
 
@@ -90,8 +97,8 @@
         box-sizing: border-box;
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
-        height: calc(100vh - 50px);
-        margin-top: 50px;
+        height: calc(100vh - 45px);
+        margin-top: 45px;
         overflow: auto;
         margin-left: 185px;
         z-index: 900;
@@ -99,18 +106,23 @@
         padding: 0 22px 0 25px;
 
         #container_content_title{
-            display: inline-block;
-            height: 60px;
-            line-height: 60px;
+            max-width: 1400px;
+            margin:0 auto;
+            height: 55px;
+            line-height: 55px;
             h2{
-                font-size: 20px;
+                font-size: 19px;
                 margin: 0 2px;
             }
+        }
+
+        .search__wrapper,.list__wrapper{
+            max-width: 1400px;
+            margin:0 auto;
         }
     }
 
     #container_content.collapse {
         margin-left: 65px;
     }
-
 }
