--- a/src/assets/css/module/home.scss
+++ b/src/assets/css/module/home.scss
@@ -77,7 +77,7 @@
             height: calc(100vh - 76px);
             overflow: auto;
             .el-menu-item{
-                color: #eee;
+                color: #ddd;
             }
             .el-menu-item:hover{
                 background: #3a4759;
