敏感词完成

--- a/src/assets/css/module/home.scss
+++ b/src/assets/css/module/home.scss
@@ -116,7 +116,7 @@
             }
         }
 
-        .search__wrapper,.list__wrapper{
+        .search__wrapper,.list__wrapper,.detail__wrapper{
             max-width: 1400px;
             margin:0 auto;
         }
