--- a/src/assets/im.scss
+++ b/src/assets/im.scss
@@ -1,9 +1,12 @@
 @import 'css/common/global';
 
 @import '../assets/css/common/form';
-@import '../assets/css/common/list';
+@import '../assets/css/common/panel';
 @import '../assets/css/common/color';
 @import '../assets/css/common/dialog';
+
+@import '../assets/css/common/list';
+@import '../assets/css/common/detail';
 
 @import '../assets/css/module/login';
 @import '../assets/css/module/home';
