--- a/src/views/talk-skill/TalkSkillList.html
+++ b/src/views/talk-skill/TalkSkillList.html
@@ -2,7 +2,7 @@
     <!--    <div class="search__wrapper">-->
     <!--    </div>-->
 
-    <div class="list__wrapper">
+    <div class="panel_main list__wrapper">
         <div class="list__tools">
             <div class="left">
                 <el-button type="primary" @click="openAddWin" icon="el-icon-circle-plus">添加</el-button>
