--- a/src/views/blanklist/BlankList.html
+++ b/src/views/blanklist/BlankList.html
@@ -25,7 +25,7 @@
             <el-table-column type="index" label="序号" align="center" width="70"></el-table-column>
             <el-table-column prop="content" label="Ip/账号" min-width="180" show-overflow-tooltip></el-table-column>
             <el-table-column prop="gmtCreate" label="创建时间" min-width="150">
-                <template slot-scope="scope">{{ scope.row.gmtCreate | date('yyyy-MM-dd hh:mm') }}</template>
+                <template slot-scope="scope">{{ scope.row.gmtCreate | dateTime }}</template>
             </el-table-column>
             <el-table-column label="状态" min-width="100">
                 <template slot-scope="scope">
