--- a/src/views/talk-skill/TalkSkillList.html
+++ b/src/views/talk-skill/TalkSkillList.html
@@ -23,17 +23,17 @@
             <el-table-column type="selection" width="50">
             </el-table-column>
             <el-table-column type="index" label="序号" align="center" width="70"></el-table-column>
-            <el-table-column prop="content" label="常用话术" min-width="200" show-overflow-tooltip></el-table-column>
-            <el-table-column prop="gmtCreate" label="创建时间" min-width="150">
+            <el-table-column prop="content" label="常用话术" min-width="300" ></el-table-column>
+            <el-table-column prop="gmtCreate" label="创建时间" min-width="110">
                 <template slot-scope="scope">{{ scope.row.gmtCreate | dateTime }}</template>
             </el-table-column>
-            <el-table-column label="状态" min-width="100">
+            <el-table-column label="状态" min-width="70">
                 <template slot-scope="scope">
                     <span v-if="scope.row.status == 1" class="green">正常</span>
                     <span v-if="scope.row.status == 2" class="orange">停用</span>
                 </template>
             </el-table-column>
-            <el-table-column label="操作" min-width="150">
+            <el-table-column label="操作" min-width="100">
                 <template slot-scope="scope">
                     <el-button @click="openModifyWin(scope.row.id)" type="success" icon="el-icon-edit">修改
                     </el-button>
@@ -55,7 +55,7 @@
 
     </div>
 
-    <el-dialog title="添加常用话术" :visible.sync="showAddWin" width="40%">
+    <el-dialog title="添加常用话术" :visible.sync="showAddWin" width="40%" :close-on-click-modal="false" :close-on-press-escape="false">
         <el-form>
             <el-input v-model="contentAdd" type="textarea" :rows="3">
             </el-input>
@@ -66,7 +66,7 @@
         </div>
     </el-dialog>
 
-    <el-dialog title="修改" :visible.sync="showModifyWin" width="25%" v-loading="loading.modifyWin">
+    <el-dialog title="修改" :visible.sync="showModifyWin" width="25%" v-loading="loading.modifyWin" :close-on-click-modal="false" :close-on-press-escape="false">
         <el-form :model="modifyModel">
             <el-input v-model="modifyModel.content" type="textarea" :rows="3"></el-input>
             <el-input v-model="modifyModel.id" type="hidden"></el-input>
