--- a/src/assets/css/module/home.scss
+++ b/src/assets/css/module/home.scss
@@ -11,7 +11,7 @@
         position: fixed;
         width: 100%;
         height: 45px;
-        background: #1f2d3d;
+        background: #333333;
         color: #bfcbd9;
         //border-bottom: 1px solid #eee;
         z-index: 1000;
@@ -57,7 +57,7 @@
 
         #menu_toggle {
             color: #ddd;
-            background-color: #1f2d3d;
+            background-color: #333333;
             padding: 8px;
             text-align: center;
             cursor: pointer;
@@ -72,7 +72,8 @@
         }
 
         #container_menu {
-            background-color: #1f2d3d;
+            background-color: #333333;
+            //background-color: #1f2d3d;
             border: 0;
             height: calc(100vh - 76px);
             overflow: auto;
@@ -84,7 +85,8 @@
             }
 
             .el-menu-item.is-active{
-                background: #d98025;
+                background: #CAA96A;
+                color: #fff;
             }
         }
         #container_menu:not(.el-menu--collapse) {
