--- a/src/views/talk-skill/TalkSkillList.html
+++ b/src/views/talk-skill/TalkSkillList.html
@@ -23,7 +23,7 @@
             <el-table-column type="selection" width="50">
             </el-table-column>
             <el-table-column type="index" label="序号" align="center" width="70"></el-table-column>
-            <el-table-column prop="content" label="常用话术" min-width="300" ></el-table-column>
+            <el-table-column prop="content" label="常用话术" min-width="300"></el-table-column>
             <el-table-column prop="gmtCreate" label="创建时间" min-width="110">
                 <template slot-scope="scope">{{ scope.row.gmtCreate | dateTime }}</template>
             </el-table-column>
@@ -55,10 +55,13 @@
 
     </div>
 
-    <el-dialog title="添加常用话术" :visible.sync="showAddWin" width="40%" :close-on-click-modal="false" :close-on-press-escape="false">
-        <el-form>
-            <el-input v-model="contentAdd" type="textarea" :rows="3">
-            </el-input>
+    <el-dialog title="添加常用话术" :visible.sync="showAddWin" width="40%" :close-on-click-modal="false"
+               :close-on-press-escape="false">
+        <el-form :model="addModel" :rules="rules" ref="addForm">
+            <el-form-item prop="content">
+                <el-input v-model="addModel.content" type="textarea" :rows="3">
+                </el-input>
+            </el-form-item>
         </el-form>
         <div slot="footer">
             <el-button @click="showAddWin = false">取 消</el-button>
@@ -66,12 +69,15 @@
         </div>
     </el-dialog>
 
-    <el-dialog title="修改" :visible.sync="showModifyWin" width="25%" v-loading="loading.modifyWin" :close-on-click-modal="false" :close-on-press-escape="false">
-        <el-form :model="modifyModel">
-            <el-input v-model="modifyModel.content" type="textarea" :rows="3"></el-input>
+    <el-dialog title="修改" :visible.sync="showModifyWin" width="25%" v-loading="loading.modifyWin"
+               :close-on-click-modal="false" :close-on-press-escape="false">
+        <el-form :model="modifyModel" :rules="rules" ref="modifyForm">
+            <el-form-item prop="content">
+                <el-input v-model="modifyModel.content" type="textarea" :rows="3"></el-input>
+            </el-form-item>
             <el-input v-model="modifyModel.id" type="hidden"></el-input>
         </el-form>
-        <div slot="footer" >
+        <div slot="footer">
             <el-button @click="showModifyWin = false">取 消</el-button>
             <el-button type="primary" @click="submitModify" v-loading="loading.modify">确 定</el-button>
         </div>
