--- a/src/assets/css/module/home.scss
+++ b/src/assets/css/module/home.scss
@@ -10,35 +10,43 @@
     #container_banner {
         position: fixed;
         width: 100%;
-        height: 45px;
+        height: 50px;
         background: #333333;
         color: #bfcbd9;
         //border-bottom: 1px solid #eee;
         z-index: 1000;
         vertical-align: middle;
         .banner-left {
-            height: 45px;
-            line-height: 45px;
+            height: 50px;
+            line-height: 50px;
             display: inline-block;
-            padding-left: 20px;
-            vertical-align: middle;
+            padding-left: 30px;
+            img{
+                display: inline-block;
+                vertical-align: middle;
+                margin: 0 20px;
+                height: 30px;
+            }
             h1 {
-                font-size: 15px;
+                display: inline-block;
+                font-size: 14px;
                 margin: 0;
+                vertical-align: middle;
+                color: #D5BA84;
             }
         }
         .banner-right {
-            height: 45px;
-            line-height: 45px;
+            height: 50px;
+            line-height: 50px;
             float: right;
-            padding-right: 20px;
+            padding-right: 30px;
             vertical-align: middle;
             .el-button {
                 vertical-align: middle;
                 display: inline-block;
                 margin-right: 15px;
                 span{
-                    color: #eee;
+                    color: #ccc;
                 }
             }
         }
@@ -51,7 +59,7 @@
         position: fixed;
         height: 100vh;
         overflow-y: hidden;
-        padding-top: 45px;
+        padding-top: 50px;
         box-shadow: 0 14px 28px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .22);
         z-index: 950;
 
@@ -99,8 +107,8 @@
         box-sizing: border-box;
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
-        height: calc(100vh - 45px);
-        margin-top: 45px;
+        height: calc(100vh - 50px);
+        margin-top: 50px;
         overflow: auto;
         margin-left: 185px;
         z-index: 900;
@@ -110,8 +118,8 @@
         #container_content_title{
             max-width: 1400px;
             margin:0 auto;
-            height: 55px;
-            line-height: 55px;
+            height: 60px;
+            line-height: 60px;
             h2{
                 font-size: 19px;
                 margin: 0 2px;
