--- a/src/assets/css/module/home.scss
+++ b/src/assets/css/module/home.scss
@@ -113,13 +113,12 @@
         margin-left: 185px;
         z-index: 900;
         background: #f5f7fa;
-        padding: 0 22px 0 25px;
+        padding: 20px;
 
         #container_content_title{
-            max-width: 1400px;
             margin:0 auto;
-            height: 60px;
-            line-height: 60px;
+            height: 40px;
+            line-height: 40px;
             h2{
                 font-size: 19px;
                 margin: 0 2px;
