--- a/src/views/Home.html
+++ b/src/views/Home.html
@@ -1,7 +1,7 @@
 <div id="container">
     <div id="container_banner">
         <div class="banner-left">
-            <img src="../assets/images/logo.png"/></a>
+            <img src="/images/logo.png"/></a>
             <h1>即时通讯管理系统</h1>
         </div>
         <div class="banner-right">
