--- a/src/assets/css/module/home.scss
+++ b/src/assets/css/module/home.scss
@@ -113,12 +113,13 @@
         margin-left: 185px;
         z-index: 900;
         background: #f5f7fa;
-        padding: 20px;
+        padding: 10px 20px ;
 
         #container_content_title{
+            max-width: 1400px;
             margin:0 auto;
-            height: 40px;
-            line-height: 40px;
+            height: 50px;
+            line-height: 50px;
             h2{
                 font-size: 19px;
                 margin: 0 2px;
