--- a/src/views/Home.html
+++ b/src/views/Home.html
@@ -5,6 +5,7 @@
             <h1>即时通讯管理系统</h1>
         </div>
         <div class="banner-right">
+            <span class="welcome">{{welcome}}</span>
             <el-button type="text" @click="logout" icon="el-icon-circle-cross">退出</el-button>
         </div>
     </div>
