暂时隐藏客服分配功能

--- a/src/views/blacklist/BlackList.html
+++ b/src/views/blacklist/BlackList.html
@@ -65,7 +65,7 @@
             <ul class="msg">
                 <li>1、黑名单可配置用户账号或IP</li>
                 <li>2、多个黑名单之间用逗号","隔开，或另启一行</li>
-                <li>3、IP地址支持通配符配置，如：192.168.0.*, 202.101.*</li>
+                <li>3、IP地址支持通配符配置，如：192.168.0.*, 202.101.*.*，不支持202.101.*，必须4段组成</li>
                 <li>4、IP地址支持ip段配置，如：192.168.1.0-192.168.1.10, 192.168.1.20-192.168.1.50</li>
             </ul>
         </el-form>
