--- a/src/views/chat/StaffChat.html
+++ b/src/views/chat/StaffChat.html
@@ -78,8 +78,8 @@
                     <div class="talk_sikill">
                         <el-popover
                                 popper-class="skills_popover"
-                                placement="right"
-                                width="300"
+                                placement="top-start"
+                                width="800"
                                 trigger="click">
                             <ul>
                                 <li v-for="(talkSkill, index) in talkSkillList"
@@ -90,8 +90,8 @@
                             <i slot="reference" class="el-icon-chat-dot-round"></i>
                         </el-popover>
                     </div>
-                    <div class="talk_disconect">
-                        <i class="el-icon-search" @click="showSearch()"></i>
+                    <div>
+                        <i class="el-icon-time" @click="showHistory()"></i>
                     </div>
                     <div class="talk_disconect">
                         <i class="el-icon-close" @click="disconnect()"></i>
@@ -115,38 +115,41 @@
         </div>
     </div>
 
-    <el-dialog
+    <el-dialog class="staffchat_his_dialog"
             title="历史记录"
-            :visible.sync="showSearchModel"
+            :close-on-click-modal="false"
+            :close-on-press-escape="false"
+            :visible="showHistoryDialog"
             width="60%">
-        <div>
-            <!--
+        <div class="staffchat_his_search_wrapper">
             <el-date-picker
-                    v-model="value2"
+                    size="small"
+                    v-model="hisQueryDate"
                     type="daterange"
-                    align="right"
+                    align="left"
                     unlink-panels
                     range-separator="至"
                     start-placeholder="开始日期"
                     end-placeholder="结束日期"
-                    :picker-options="pickerOptions">
+                    :picker-options="hisQueryDatePickerOptions">
             </el-date-picker>
-            <el-button type="primary" @click="searchData" icon="el-icon-search">搜索</el-button>
-            -->
+            <el-button type="primary" @click="hisSearch" icon="el-icon-search" size="small">搜索</el-button>
         </div>
-        <div>
-            <div v-for="(o,index) in searchedList" :key="o.id">
-                <div class="search-chat-name">
+        <div class="staffchat_his_data_wrapper">
+            <div v-for="(o,index) in hisList" :key="o.id" class="item">
+                <div class="name">
                     <template v-if="o.sendUserType == 1">
                         {{ current.visitorName ? current.visitorName : '游客' }}
                     </template>
                     <template v-else>
                         {{ current.staffName ? current.staffName : '我' }}
                     </template>
+
+                    &nbsp;&nbsp; {{ o.gmtCreate | date('HH:mm:ss') }}
                 </div>
-                <div class="search-chat-content">
+                <div class="content">
                     <template v-if="o.contentType == 2">
-                        <img width="16" height="16" :src="message.content">
+                        <img width="16" height="16" :src="o.content">
                     </template>
                     <template v-else>
                         {{ o.content }}
@@ -154,17 +157,19 @@
                 </div>
             </div>
         </div>
+
         <!--
-        <el-pagination class="list__page"
-                       @size-change="pageSizeChange"
-                       @current-change="currentPageChange"
-                       :current-page="query.pageNo"
+        <el-pagination @size-change="hisPageSizeChange"
+                       @current-change="hisCurrentPageChange"
+                       :current-page="hisQuery.pageNo"
                        :page-sizes="[10, 20, 50, 100]"
-                       :page-size="query.pageSize"
+                       :page-size="hisQuery.pageSize"
                        layout="prev, pager, nextr"
-                       :total="this.page.recordCount">
+                       :total="hisPage.recordCount"
+        >
         </el-pagination>
         -->
+
     </el-dialog>
     <el-dialog
             :visible.sync="imagePreviewVisible"
