--- a/src/views/chat/StaffChat.html
+++ b/src/views/chat/StaffChat.html
@@ -119,7 +119,7 @@
             title="历史记录"
             :close-on-click-modal="false"
             :close-on-press-escape="false"
-            :visible="showHistoryDialog"
+            :visible.sync="showHistoryDialog"
             width="60%">
         <div class="staffchat_his_search_wrapper">
             <el-date-picker
@@ -158,17 +158,15 @@
             </div>
         </div>
 
-        <!--
         <el-pagination @size-change="hisPageSizeChange"
                        @current-change="hisCurrentPageChange"
                        :current-page="hisQuery.pageNo"
                        :page-sizes="[10, 20, 50, 100]"
                        :page-size="hisQuery.pageSize"
-                       layout="prev, pager, nextr"
-                       :total="hisPage.recordCount"
-        >
+                       layout="prev, pager, next"
+                       :total="hisPage.recordCount" >
+
         </el-pagination>
-        -->
 
     </el-dialog>
     <el-dialog
