--- a/src/views/user/login.scss
+++ b/src/views/user/login.scss
@@ -36,6 +36,7 @@
     border-radius: 10px;
     color: #dbba7e;
    .submit {
+      padding: 5px 0;
       button {
         width: 100%;
         height: 42px;
